examples/test/testpolicy6682.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6682
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key16: value36
      key2: value35
      key22: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value28
          key25: value17
      podSelector:
        matchLabels:
          key35: value47
          key19: value2
          key12: value6
